tests/errors/sem.invalid-type.bin-order.or
main :: () -> void {
    x := false;
    y := true;
    x < y;
};
